# py-simple-webscraping-sunat

./: .gitignore  README.md  config.py  connect.py  database.sql  extract.py  pyproject.toml
